--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dépôt des comptes rendus</title>
-    <link rel="icon" href="/icon.png" type="image/png" />
+    <link rel="icon" href="icon.png" type="image/png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
